2006-11-03  Bruno Haible  <bruno@clisp.org>

	* lib/xalloc.h (XMALLOC, XNMALLOC, XZALLOC, XCALLOC): New macros.
	(xnboundedmalloc): New inline function.
	* lib/fstrcmp.c (fstrcmp): Use xnmalloc instead of xmalloc.
	* lib/hash.c (hash_init, resize): Use XCALLOC instead of xcalloc.
	* lib/propername.c (proper_name, proper_name_utf8): Use XNMALLOC
	instead of xmalloc.
	* lib/xgetcwd.c (xgetcwd): Use XNMALLOC instead of xmalloc.
	* lib/xstrdup.c (xstrdup): Likewise.

2006-11-06  Bruno Haible  <bruno@clisp.org>

	* lib/getopt_.h.diff: Update.

2006-11-06  Bruno Haible  <bruno@clisp.org>

	Moved canonicalize to gnulib.
	* modules/canonicalize: Remove file.
	* lib/canonicalize.h: Remove file.
	* lib/canonicalize.c: Remove file.
	* m4/canonicalize.m4: Remove file.
	* Makefile.am (EXTRA_DIST): Remove these files.
	* modules/progreloc (Depends-on): Replace 'canonicalize' with
	'canonicalize-lgpl'.

2006-11-06  Bruno Haible  <bruno@clisp.org>

	* lib/canonicalize.h (canonicalize_file_name): Fix wrong comment
	borrowed from glibc.

2006-11-02  Bruno Haible  <bruno@clisp.org>

	* lib/xalloc.h (xnmalloc): New declaration. From gnulib xalloc.h.
	* lib/xmalloc.c (fixup_null_alloc): Write NULL, not 0.
	(xnmalloc): New function.

2006-10-29  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.h: Wrap declarations in extern "C".

2006-10-29  Bruno Haible  <bruno@clisp.org>

	Make it compile in C++ mode.
	* lib/backupfile.c (find_backup_file_name): Cast malloc result.
	* lib/xalloc.h (xrealloc): Define as template with appropriate return
	type.
	* lib/xstrdup.c (xstrdup): Cast xmalloc result.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* modules/canonicalize (Makefile.am): Remove EXTRA_DIST. Now done by
	gnulib-tool.
	* modules/relocatable (Makefile.am): Likewise.
	* modules/relocwrapper (Makefile.am): Likewise.

2006-10-25  Bruno Haible  <bruno@clisp.org>
